--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:postgresql://[2001:1284:f016:ab2f:7043:8147:a7f6:29c2]:5432/vida_sustentavel
+spring.datasource.url= jdbc:postgresql://[2001:1284:f016:3def:fd16:46ee:c8a4:d8fa]:5432/vida_sustentavel
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=validate
